--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,21 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 86400;
         proxy_redirect off;
-    }  
+    }
+
+    location /code/ {
+        # Serve GRADIO 7860
+        proxy_pass http://localhost:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 86400;
+        proxy_redirect off;
+    }    
 
     location /one/ {
         client_max_body_size 64m;
