--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 4444 default_server;
     listen [::]:4444 default_server;
 
-    server_name _;  # Modify your domain name accordingly
+    server_name netora.link;  # Modify your domain name accordingly
 
     location / {
         # Serve GRADIO 7860
@@ -19,8 +19,8 @@ server {
     }
 
     location /code/ {
-        # Serve GRADIO 7860
-        proxy_pass http://localhost:8000;
+        # Serve GRADIO 8080
+        proxy_pass http://localhost:8080/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
