--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 4444 default_server;
     listen [::]:4444 default_server;
 
-    server_name netora.link;  # Modify your domain name accordingly
+    server_name _;  # Modify your domain name accordingly
 
     location / {
         # Serve GRADIO 7860
