--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,8 @@ server {
 
     location /code/ {
         # Serve GRADIO 8080
-        proxy_pass http://localhost:8080/;
+	rewrite /code/(.*) /$1 break;
+        proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
