--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,6 @@
 :80 {
-    reverse_proxy /code/* localhost:8080 {
-      without /code
+    handle_path /code/* {
+        reverse_proxy localhost:8080
     }
     reverse_proxy /* localhost:7860
 }
